<resources>
    <string name="app_name">lab2</string>
    <string name="logo_text">Калькулятор</string>
    <string name="input_hint_1">Введите число 1</string>
    <string name="input_hint_2">Введите число 2</string>
    <string name="add_numbers">Добавить числа</string>
    <string name="clear">Очистить</string>
    <string-array name="calculator_functions">
        <item>Сложение</item>
        <item>Вычитание</item>
        <item>Умножение</item>
        <item>Деление</item>
    </string-array>
</resources>